# LLD

chess_validator/: Driver.py  main.py
chess_validator/entity/: Board.py  Chess.py  Piece.py  Player.py
chess_validator/factory/: PieceFactory.py
chess_validator/service/: InputReaderService.py
chess_validator/strategy/: MoveStrategy.py
chess_validator/util/: enum.py
parking_lot/: Driver.py  main.py
parking_lot/dto/: CommandDTO.py
parking_lot/entity/: Floor.py  ParkingLot.py  Slot.py  Ticket.py  Vehicle.py
parking_lot/factory/: CommandDTOFactory.py
parking_lot/service/: InputReaderService.py
parking_lot/util/: enum.py  singleton.py
snake_and_ladder/: Board.py  Die.py  Game.py  Player.py  main.py
split_wise/: Driver.py  main.py
split_wise/dao/: App.py  Command.py  User.py
split_wise/dto/: AppDTO.py  ExpenseDTO.py  UserDTO.py
split_wise/entity/: AppDTO.py  CommandDTO.py  ExpenseDTO.py  UserDTO.py
split_wise/factory/: CommandFactory.py  UserFactory.py
split_wise/model/: App.py  User.py
split_wise/service/: InputReaderService.py
split_wise/strategy/: SplitStrategy.py
tic-tac-toe-ddd/src/shared/domain/: entity.py
tic-tac-toe-ddd/src/tic_tac_toe/domain/entity/: board.py  game.py  player.py
tic-tac-toe-ddd/src/tic_tac_toe/usecase/: play.py
tic_tac_toe_ddd/: main.py  pyproject.toml
tic_tac_toe_ddd/src/tic_tac_toe/domain/value_object/: symbol.py
tic_tac_toe_ddd/src/tic_tac_toe/usecase/: play.py
